# dbt_WeatherData

./: .gitignore  README.md  api_data_extraction.py  pyproject.toml  weather_ml_retrieval.py
dbt_weather_demo/: dbt_project.yml
dbt_weather_demo/models/: schema.yml
dbt_weather_demo/models/marts/: weather_summary.sql
dbt_weather_demo/models/staging/: stg_daily_weather.sql  stg_hourly_weather.sql
src/: model_training.py  weather_ml_retrieval.py
