[project]
name = "dbt-weatherdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.6",
    "dbt>=1.0.0.40.5",
    "dbt-bigquery>=1.10.1",
    "dbt-core>=1.10.10",
    "gcloud>=0.18.3",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
]
